force-app/main/default/objects/ssot__DedupEngmtAnlssTextInsightAssoc__dlm/fields/ssot__DedupEngmtAnlssTxtInsightId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DedupEngmtAnlssTxtInsightId__c</fullName>
    <label>Dedup Engmt Anlss Txt Insight</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DedupEngmtAnlssTxtInsightId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>