force-app/main/default/objects/ssot__DedupEngmtAnlssTextInsightAssoc__dlm/fields/ssot__DeletedAt__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeletedAt__c</fullName>
    <label>DeletedAt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeletedAt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>