force-app/main/default/objects/ssot__DedupEngmtAnlssTextInsightAssoc__dlm/fields/ssot__EngagementAnalysisTextInsightId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementAnalysisTextInsightId__c</fullName>
    <label>Engagement Analysis Text Insight</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementAnalysisTextInsightId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>